# Mosaic

./: .env.example  .env.ingestion_service.local.template  .env.local.template  .env.mosaic-ui.local.template  .env.mosaic.local.template  .env.shared.template  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  AI_AGENT_INGESTION_PLAN.md  ARCHITECTURE_LOG.md  CLAUDE.md  CRUD-005-IMPLEMENTATION-COMPLETE.md  Dockerfile  README.md  SECURITY-SETUP.md  SECURITY_SETUP.md  SYSTEM_STATUS_REPORT.md  azure.yaml  complete_crud_005.py  create_real_mosaic_graph.py  create_sample_visualization.py  dependency_restructure_proposal.md  docker-compose.local.yml  end_to_end_test_rdf.py  environment-variables.template  final_validation_omr_p1_004.py  integration_test_rdf.py  mosaic_real_repository_graph.html  mosaic_repository_graph.html  omnirag_benchmark_results.json  pyproject.toml  requirements-dev.txt  requirements-ingestion.txt  requirements.txt  streamlit_validation_app.py  test_graph_viz_simple.py  test_mcp_graph_integration.py  validate_crud_005.py  (+2 more)
.claude/: settings.json
.claude/commands/: README.md  azure-deploy.md  debug-and-solve.md  dev-implement.md  doc-check.md  generate-plugin.md  git-branch-workflow.md  git-commit-workflow.md  git-workflow-commit.md  ops-azure-deploy.md  (+12 more)
.github/: MEMORY-MCP-GUIDE.md  MEMORY-MCP-MIGRATION-SUMMARY.md  README-Copilot.md  copilot-instructions.md
docs/: CODE_INGESTION_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  Mosaic_MCP_Tool_PRD.md  Mosaic_MCP_Tool_TDD.md  UI_MODERNIZATION_ACTION_PLAN.md  architecture-diagram.md  ingestion-service-usage.md  omnirag-ui-feature-matrix.md
examples/: graph_visualization_demo.py
infra/: README.md  ingestion-service.bicep  main.bicep  main.json  main.parameters.json  query-server.bicep  resources.bicep  ui-service.bicep
scripts/: validate_environment.py
src/mosaic-ingestion/: COSMOS_CLEANUP_README.md  OMR-P1-007-IMPLEMENTATION.md  __init__.py  cleanup_cosmos.ps1  cleanup_cosmos_simple.ps1  cosmos_cleanup.py  cosmos_mode_manager.py  database_initializer.py  enhanced_local_main.py  initialize_local_cosmos.py  integration_example_graph_builder.py  local_main.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_cosmos_cleanup.py  standalone_sparql_validation.py  test_cosmos_connection.py  test_graph_builder.py  validate_cleanup.py  validate_crud_005_direct.py  validate_direct.py  validate_graph_builder.py  validate_sparql.py
src/mosaic-ingestion/agents/: __init__.py  base_agent.py  code_parser.py  docu_writer.py
src/mosaic-ingestion/ontologies/: README.md  __init__.py  code_base.owl  python.owl  relationships.owl
src/mosaic-ingestion/plugins/: ai_code_parser.py  ai_error_handler.py  graph_builder.py  ingestion.py
src/mosaic-ingestion/rdf/: __init__.py  ontology_manager.py  sparql_builder.py  test_ontology_manager.py  test_triple_generator.py  triple_generator.py
src/mosaic-ingestion/schemas/: __init__.py
src/mosaic-ingestion/tests/: __init__.py  conftest.py  test_commit_state_manager.py  test_cosmos_cleanup.py  test_crud_003_delete_operations.py  test_crud_004_branch_lifecycle.py  test_crud_005_branch_aware_repository.py  test_main.py  test_orchestrator.py  test_sparql_builder.py
src/mosaic-ingestion/tests/test_models/: test_golden_node.py
src/mosaic-ingestion/tests/test_plugins/: test_graph_builder.py  test_ingestion.py
src/mosaic-ingestion/utils/: __init__.py  branch_aware_repository.py  branch_lifecycle_manager.py  commit_state_manager.py  container_configuration.py  force_override.py  repository_implementations.py
src/mosaic-mcp/: Dockerfile  TEST_IMPROVEMENT_SUMMARY.md  pyproject.toml  pytest.ini  quick_validate_omr_p2_005.py  requirements.txt  run_tests.py  test_sync_standalone.py  validate_omr_p2_005.py  validate_omr_p3_002.py
src/mosaic-mcp/config/: settings.py
src/mosaic-mcp/docs/: OMR-P2-002-COMPLETION-REPORT.md  OMR-P3-004-Implementation.md
src/mosaic-mcp/plugins/: README_omnirag_orchestrator.md  __init__.py  aggregation_mcp_tools.py  context_aggregator.py  diagram.py  enhanced_omnirag.py  graph_plugin.py  graph_synchronizer.py  incremental_learning.py  intent_mcp_tools.py  invisible_learning.py  memory.py  nl2sparql_routes.py  nl2sparql_service.py  nl2sparql_translator.py  omnirag_orchestrator.py  query_intent_classifier.py  query_learning_system.py  refinement.py  sparql_query_executor.py  vector_search.py
src/mosaic-mcp/server/: auth.py  kernel.py  main.py  sparql_routes.py  sparql_service.py
src/mosaic-mcp/tests/: __init__.py  conftest.py  test_auth_oauth2.py  test_branch_aware_models.py  test_config_settings.py  test_context_aggregation_integration.py  test_graph_synchronizer.py  test_integration_mcp_protocol.py  test_intent_classification.py  test_models_comprehensive.py  test_nl2sparql_translator.py  test_omnirag_integration.py  test_omnirag_orchestrator.py  test_omnirag_performance.py  test_omr_p3_004_simple.py  test_plugins_core.py  test_plugins_graph.py  test_query_learning_system.py  test_server_main.py  test_session_models_direct.py  test_sparql_integration.py  test_sparql_models.py
src/mosaic-mcp/training/: __init__.py  intent_training_data.py  model_trainer.py
src/mosaic-mcp/utils/: redis_session.py
src/mosaic-ui/: Dockerfile  TEST_IMPROVEMENT_SUMMARY.md  app.py  app_backup.py  app_local.py  pyproject.toml  requirements.txt  run_tests.py
src/mosaic-ui/.streamlit/: config.toml
src/mosaic-ui/plugins/: __init__.py  omnirag_plugin.py
src/mosaic-ui/tests/: __init__.py  conftest.py  test_app_core.py  test_graph_visualizations.py  test_omnirag_plugin.py  test_performance_ui.py  test_streamlit_integration.py
test_env/: pyvenv.cfg
tests/: test_ai_descriptions.py  test_ast_parsing_comprehensive.py  test_basic.py  test_comprehensive_functionality.py  test_ingestion_cloning.py  test_ingestion_diagnostics.py  test_knowledge_population.py  test_mcp_final.py  test_mcp_interface.py  test_omnirag_integration.py  test_omnirag_performance.py  test_real_repository_cloning.py  test_sparql_query_executor.py  test_structure_validation.py
(+91 files in other folders)
